working on compass
There is one bug if we rotate different panels one by one, need to fix that also

--- a/projects/math-app/index.html
+++ b/projects/math-app/index.html
@@ -85,7 +85,18 @@
       <img class="rotate-btn" src="./_assets/img/tool-rotate-btn.svg">
       <img class="close-btn" src="./_assets/img/tool-close-btn.svg">
     </div>    
-    <div class="draggable draggable-set rotatable drag-area" data-panel="compass" data-panel-set="compass">
+    <div class="draggable draggable-set rotatable" data-panel="compass" data-panel-set="compass">
+      <div class="outer">
+        <div class="hold-move drag-area"></div>
+        <div class="hold-rotate"></div>
+        <div class="hand-point rotatable rotate-btn">
+          <div class="end-point"></div>
+        </div>
+        <div class="hand-pencil rotatable rotate-btn">
+          <div class="end-point"></div>
+        </div>
+      </div>
+
       <span class="borderlr"></span>
       <span class="bordertb"></span>
       <span class="point point-1"></span>
@@ -94,6 +105,8 @@
       <span class="point point-4"></span>
       <img class="rotate-btn" src="./_assets/img/tool-rotate-btn.svg">
       <img class="close-btn" src="./_assets/img/tool-close-btn.svg">
+      <img class="flip-btn" src="./_assets/img/tool-flip-btn.svg">
+      <img class="scale-btn" src="./_assets/img/tool-scale-btn.svg">
     </div>    
 
     <!-- widget panels -->
