calculator logic refactored

--- a/projects/math-app/index.html
+++ b/projects/math-app/index.html
@@ -15,22 +15,22 @@
       <div class="tools-planet tools-planet-sets drag-area" id="toolsPlanetSets">
         <button class="tools-satellite primary" data-panel-btn="cubes"><img src="./_assets/img/box.svg"></button>
 
-        <button class="tools-satellite primary disabled has-child" data-tool-group-type="scale"><img src="./_assets/img/scale.svg"></button>
+        <button class="tools-satellite primary has-child" data-tool-group-type="scale"><img src="./_assets/img/scale.svg"></button>
         <button class="tools-satellite secondary" data-tool-group-type="scale"><img src="./_assets/img/scale-wooden-sm.svg"></button>
         <button class="tools-satellite secondary" data-tool-group-type="scale"><img src="./_assets/img/scale-wooden-lg.svg"></button>
         <button class="tools-satellite secondary" data-tool-group-type="scale"><img src="./_assets/img/scale-transparent-sm.svg"></button>
         <button class="tools-satellite secondary" data-tool-group-type="scale"><img src="./_assets/img/scale-transparent-lg.svg"></button>
 
-        <button class="tools-satellite primary disabled" data-panel-btn="scale"><img src="./_assets/img/set-square-isosceles.svg"></button>
-        <button class="tools-satellite primary disabled"><img src="./_assets/img/protractor.svg"></button>
+        <button class="tools-satellite primary" data-panel-btn="scale"><img src="./_assets/img/set-square-isosceles.svg"></button>
+        <button class="tools-satellite primary"><img src="./_assets/img/protractor.svg"></button>
         <button class="tools-satellite primary" data-panel-btn="compass"><img src="./_assets/img/compass.svg"></button>
-        <button class="tools-satellite disabled primary" data-panel-btn="abacus"><img src="./_assets/img/abacus.svg"></button>
-        <button class="tools-satellite disabled primary" data-panel-btn="calculator"><img src="./_assets/img/calc.svg"></button>
-        <button class="tools-satellite disabled primary" data-panel-btn="clock"><img src="./_assets/img/clock.svg"></button>
-        <button class="tools-satellite disabled primary" data-panel-btn="flowers"><img src="./_assets/img/flower.svg"></button>
-        <button class="tools-satellite disabled primary" data-panel-btn="money"><img src="./_assets/img/yen.svg"></button>
-        <button class="tools-satellite disabled primary" data-panel-btn="shapes"><img src="./_assets/img/stack.svg"></button>
-        <button class="tools-satellite disabled primary" data-panel-btn="numbers"><img src="./_assets/img/21.svg"></button>
+        <button class="tools-satellite primary" data-panel-btn="abacus"><img src="./_assets/img/abacus.svg"></button>
+        <button class="tools-satellite primary" data-panel-btn="calculator"><img src="./_assets/img/calc.svg"></button>
+        <button class="tools-satellite primary" data-panel-btn="clock"><img src="./_assets/img/clock.svg"></button>
+        <button class="tools-satellite primary" data-panel-btn="flowers"><img src="./_assets/img/flower.svg"></button>
+        <button class="tools-satellite primary" data-panel-btn="money"><img src="./_assets/img/yen.svg"></button>
+        <button class="tools-satellite primary" data-panel-btn="shapes"><img src="./_assets/img/stack.svg"></button>
+        <button class="tools-satellite primary" data-panel-btn="numbers"><img src="./_assets/img/21.svg"></button>
       </div>
 
       <div class="tools-planet tools-planet-pens drag-area" id="toolsPlanetPens">
