--- a/projects/math-app/index.html
+++ b/projects/math-app/index.html
@@ -16,10 +16,10 @@
         <button class="tools-satellite primary" data-panel-btn="cubes"><img src="./_assets/img/box.svg"></button>
 
         <button class="tools-satellite primary has-child" data-tool-group-type="scale"><img src="./_assets/img/scale.svg"></button>
-        <button class="tools-satellite secondary" data-tool-group-type="scale" data-id=""><img src="./_assets/img/scale-wooden-sm.svg"></button>
-        <button class="tools-satellite secondary" data-tool-group-type="scale" data-id=""><img src="./_assets/img/scale-wooden-lg.svg"></button>
-        <button class="tools-satellite secondary" data-tool-group-type="scale" data-id=""><img src="./_assets/img/scale-transparent-sm.svg"></button>
-        <button class="tools-satellite secondary" data-tool-group-type="scale" data-id=""><img src="./_assets/img/scale-transparent-lg.svg"></button>
+        <button class="tools-satellite secondary" data-tool-group-type="scale" data-panel-btn="scale-wooden-sm"><img src="./_assets/img/scale-wooden-sm.svg"></button>
+        <button class="tools-satellite secondary" data-tool-group-type="scale" data-panel-btn="scale-wooden-lg"><img src="./_assets/img/scale-wooden-lg.svg"></button>
+        <button class="tools-satellite secondary" data-tool-group-type="scale" data-panel-btn="scale-transparent-sm"><img src="./_assets/img/scale-transparent-sm.svg"></button>
+        <button class="tools-satellite secondary" data-tool-group-type="scale" data-panel-btn="scale-transparent-lg"><img src="./_assets/img/scale-transparent-lg.svg"></button>
 
         <button class="tools-satellite primary" data-panel-btn="set-square"><img src="./_assets/img/set-square-isosceles.svg"></button>
         <button class="tools-satellite primary"><img src="./_assets/img/protractor.svg"></button>
@@ -75,7 +75,7 @@
     <svg id="cv" class="cv" xmlns="http://www.w3.org/2000/svg">Browser does not support SVG.</svg>
 
     <!-- set panels -->
-    <div class="draggable draggable-set rotatable" data-panel="scale" data-panel-set="scale" id="woodenSM">
+    <div class="draggable draggable-set rotatable" data-panel="scale-wooden-sm" data-panel-set="scale">
       <img class="drag-area scale" src="./_assets/widgets/scale-wooden-sm.svg">
       <span class="borderlr"></span>
       <span class="bordertb"></span>
@@ -86,7 +86,7 @@
       <img class="btn rotate-btn" src="./_assets/img/tool-rotate-btn.svg">
       <img class="btn close-btn" src="./_assets/img/tool-close-btn.svg">
     </div>      
-    <div class="draggable draggable-set rotatable" data-panel="scale" data-panel-set="scale" id="woodenLG">
+    <div class="draggable draggable-set rotatable" data-panel="scale-wooden-lg" data-panel-set="scale">
       <img class="drag-area scale" src="./_assets/widgets/scale-wooden-lg.svg">
       <span class="borderlr"></span>
       <span class="bordertb"></span>
@@ -97,7 +97,7 @@
       <img class="btn rotate-btn" src="./_assets/img/tool-rotate-btn.svg">
       <img class="btn close-btn" src="./_assets/img/tool-close-btn.svg">
     </div>    
-    <div class="draggable draggable-set rotatable" data-panel="scale" data-panel-set="scale" id="transparentSM">
+    <div class="draggable draggable-set rotatable" data-panel="scale-transparent-sm" data-panel-set="scale">
       <img class="drag-area scale" src="./_assets/widgets/scale-transparent-sm.svg">
       <span class="borderlr"></span>
       <span class="bordertb"></span>
@@ -108,7 +108,7 @@
       <img class="btn rotate-btn" src="./_assets/img/tool-rotate-btn.svg">
       <img class="btn close-btn" src="./_assets/img/tool-close-btn.svg">
     </div>        
-    <div class="draggable draggable-set rotatable" data-panel="scale" data-panel-set="scale" id="transparentLG">
+    <div class="draggable draggable-set rotatable" data-panel="scale-transparent-lg" data-panel-set="scale">
       <img class="drag-area scale" src="./_assets/widgets/scale-transparent-lg.svg">
       <span class="borderlr"></span>
       <span class="bordertb"></span>
@@ -1073,7 +1073,8 @@
   </div>
   
   <script src="./_assets/config/settings.json"></script>
-  <script async src="./_assets/js/script.min.js"></script>
+  <!-- <script async src="./_assets/js/script.min.js"></script> -->
+  <script async src="./_src/js/script.js"></script>
 </body>
 
 </html>
