set-square btns added

--- a/projects/math-app/index.html
+++ b/projects/math-app/index.html
@@ -22,7 +22,10 @@
         <button class="tools-satellite secondary" data-tool-group-type="scale" data-panel-btn="scale-transparent-lg"><img src="./_assets/img/scale-transparent-lg.svg"></button>
         <button class="tools-satellite secondary" data-tool-group-type="scale" data-panel-btn="scale-new"><img src="./_assets/img/scale-new.svg"></button>
 
-        <button class="tools-satellite primary" data-panel-btn="set-square"><img src="./_assets/img/set-square-isosceles.svg"></button>
+        <button class="tools-satellite primary has-child" data-tool-group-type="set-square"><img src="./_assets/img/set-square-isosceles.svg"></button>
+        <button class="tools-satellite secondary" data-tool-group-type="set-square" data-panel-btn="set-square-isosceles"><img src="./_assets/img/set-square-isosceles-btn.svg"></button>
+        <button class="tools-satellite secondary" data-tool-group-type="set-square" data-panel-btn="set-square-scalene"><img src="./_assets/img/set-square-scalene-btn.svg"></button>
+
         <button class="tools-satellite primary"><img src="./_assets/img/protractor.svg"></button>
         <button class="tools-satellite primary" data-panel-btn="compass"><img src="./_assets/img/compass.svg"></button>
         <button class="tools-satellite primary" data-panel-btn="abacus"><img src="./_assets/img/abacus.svg"></button>
@@ -134,8 +137,35 @@
       <img class="btn close-btn" src="./_assets/img/tool-close-btn.svg">
       <img class="btn scale-flip-btn" src="./_assets/img/scale-flip-btn.svg">
     </div>  
+    
+    <div class="draggable draggable-set rotatable" data-panel="set-square-isosceles" data-panel-set="set-square">
+      <img class="drag-area scale" src="./_assets/widgets/set-square-isosceles-widget.svg">
+      <span class="borderlr"></span>
+      <span class="bordertb"></span>
+      <span class="point point-1"></span>
+      <span class="point point-2"></span>
+      <span class="point point-3"></span>
+      <span class="point point-4"></span>
+      <img class="btn rotate-btn" src="./_assets/img/tool-rotate-btn.svg">
+      <img class="btn close-btn" src="./_assets/img/tool-close-btn.svg">
+      <img class="btn flip-btn" src="./_assets/img/tool-flip-btn.svg">
+      <img class="btn scale-btn" src="./_assets/img/tool-scale-btn.svg">
+    </div>    
+    <div class="draggable draggable-set rotatable" data-panel="set-square-scalene" data-panel-set="set-square">
+      <img class="drag-area scale" src="./_assets/widgets/set-square-scalene-widget.svg">
+      <span class="borderlr"></span>
+      <span class="bordertb"></span>
+      <span class="point point-1"></span>
+      <span class="point point-2"></span>
+      <span class="point point-3"></span>
+      <span class="point point-4"></span>
+      <img class="btn rotate-btn" src="./_assets/img/tool-rotate-btn.svg">
+      <img class="btn close-btn" src="./_assets/img/tool-close-btn.svg">
+      <img class="btn flip-btn" src="./_assets/img/tool-flip-btn.svg">
+      <img class="btn scale-btn" src="./_assets/img/tool-scale-btn.svg">
+    </div>    
 
-    <div class="draggable draggable-set rotatable" data-panel="compass" data-panel-set>
+    <div class="draggable draggable-set rotatable" data-panel="compass" data-panel-set="compass">
       <div class="outer">
         <div class="hold-move drag-area"></div>
         <div class="rotate-compass rotate-btn"></div>
