protractor UI added and rotate logic also

--- a/projects/math-app/index.html
+++ b/projects/math-app/index.html
@@ -26,7 +26,7 @@
         <button class="tools-satellite secondary" data-tool-group-type="set-square" data-panel-btn="set-square-isosceles"><img src="./_assets/img/set-square-isosceles-btn.svg"></button>
         <button class="tools-satellite secondary" data-tool-group-type="set-square" data-panel-btn="set-square-scalene"><img src="./_assets/img/set-square-scalene-btn.svg"></button>
 
-        <button class="tools-satellite primary"><img src="./_assets/img/protractor.svg"></button>
+        <button class="tools-satellite primary" data-panel-btn="protractor"><img src="./_assets/img/protractor.svg"></button>
         <button class="tools-satellite primary" data-panel-btn="compass"><img src="./_assets/img/compass.svg"></button>
         <button class="tools-satellite primary" data-panel-btn="abacus"><img src="./_assets/img/abacus.svg"></button>
         <button class="tools-satellite primary" data-panel-btn="calculator"><img src="./_assets/img/calc.svg"></button>
@@ -139,7 +139,7 @@
     </div>  
     
     <div class="draggable draggable-set rotatable" data-panel="set-square-isosceles" data-panel-set="set-square">
-      <img class="drag-area scale" src="./_assets/widgets/set-square-isosceles-widget.svg">
+      <img class="drag-area set-square" src="./_assets/widgets/set-square-isosceles-widget.svg">
       <span class="borderlr"></span>
       <span class="bordertb"></span>
       <span class="point point-1"></span>
@@ -152,7 +152,21 @@
       <img class="btn rotate-btn" src="./_assets/img/tool-rotate-btn.svg">
     </div>    
     <div class="draggable draggable-set rotatable" data-panel="set-square-scalene" data-panel-set="set-square">
-      <img class="drag-area scale" src="./_assets/widgets/set-square-scalene-widget.svg">
+      <img class="drag-area set-square" src="./_assets/widgets/set-square-scalene-widget.svg">
+      <span class="borderlr"></span>
+      <span class="bordertb"></span>
+      <span class="point point-1"></span>
+      <span class="point point-2"></span>
+      <span class="point point-3"></span>
+      <span class="point point-4"></span>
+      <img class="btn close-btn" src="./_assets/img/tool-close-btn.svg">
+      <img class="btn flip-btn" src="./_assets/img/tool-flip-btn.svg">
+      <img class="btn scale-btn" src="./_assets/img/tool-scale-btn.svg">
+      <img class="btn rotate-btn" src="./_assets/img/tool-rotate-btn.svg">
+    </div>    
+
+    <div class="draggable draggable-set rotatable" data-panel="protractor" data-panel-set="protractor">
+      <img class="drag-area protractor" src="./_assets/widgets/protractor-widget.svg">
       <span class="borderlr"></span>
       <span class="bordertb"></span>
       <span class="point point-1"></span>
