draw - mousemove working after mousedown

--- a/projects/math-app/index.html
+++ b/projects/math-app/index.html
@@ -183,21 +183,20 @@
       <div class="outer">
         <div class="hold-move drag-area"></div>
         <div class="rotate-compass rotate-btn"></div>
-        <div class="rotate-point rotatable rotate-btn">
-          <div class="rotate-compass-ref"></div>
+        <!-- <div class="rotate-point rotatable rotate-btn"> -->
+        <div class="rotate-point">
+          <div class="point rotate-compass-ref"></div>
         </div>
         <div class="rotate-pencil rotatable rotate-btn">
-          <div class="rotate-pencil-ref"></div>
+          <div class="point rotate-pencil-ref"></div>
         </div>
         <div class="rotate-hand-ref"></div>
       </div>
 
+      <div class="ref"></div>
+
       <span class="borderlr"></span>
       <span class="bordertb"></span>
-      <span class="point point-1"></span>
-      <span class="point point-2"></span>
-      <span class="point point-3"></span>
-      <span class="point point-4"></span>
       <img class="btn close-btn" src="./_assets/img/tool-close-btn.svg">
       <img class="btn flip-btn" src="./_assets/img/tool-flip-btn.svg">
       <img class="btn scale-btn" src="./_assets/img/tool-scale-btn.svg">
