reset functionality added for abacus

--- a/projects/math-app/index.html
+++ b/projects/math-app/index.html
@@ -608,7 +608,7 @@
           <path data-name="Rectangle 238" fill="#633" d="M586.495 69.146h.106v122.152h-.106z" />
           <path data-name="Path 2030" d="M586.597 13.505h13.4V-.001h-13.5v13.506z" fill="#633" />
           <path data-name="Path 2031" d="M586.497 191.298v13.506h13.5v-13.506h-13.5z" fill="#633" />
-          <path class="drag-area" data-name="Path 2032" d="M13.222 69.146h.251v-13.5h-.251V13.51H.001v177.793h13.221z" fill="#633" />
+          <path id="leftCol" data-name="Path 2032" d="M13.222 69.146h.251v-13.5h-.251V13.51H.001v177.793h13.221z" fill="#633" />
           <path data-name="Rectangle 239" fill="#633" d="M13.472 69.146h.033v122.152h-.033z" />
           <path data-name="Rectangle 240" fill="#633" d="M13.222 13.505h.251v42.136h-.251z" />
           <path data-name="Rectangle 241" fill="#633" d="M13.472 13.505h.033v42.136h-.033z" />
