Demo | Abacus: UI + Logic both done!

--- a/projects/math-app/index.html
+++ b/projects/math-app/index.html
@@ -826,7 +826,7 @@
           <path data-name="Rectangle 235" fill="none" d="M13.506 13.505h572.972v42.136H13.506z" />
           <path class="drag-area" data-name="Rectangle 236" fill="#633" d="M13.506 55.641h572.972v13.505H13.506z" />
           
-          <path id="topCol" data-name="Path 2027" d="M586.477 13.505h.017V-.001H13.506v13.506z" fill="#633" />
+          <path id="resetArea" class="reset" data-name="Path 2027" d="M586.477 13.505h.017V-.001H13.506v13.506z" fill="#633" />
 
           <path class="drag-area" data-name="Path 2028" d="M586.477 191.298H13.506v13.506h572.989v-13.506z"
             fill="#633" />
