color picker files added

--- a/examples/color-picker/index.html
+++ b/examples/color-picker/index.html
@@ -13,15 +13,8 @@
 <body>
   <input type="text" id="picker-elements-colour" class="picker" value="933132"></input>
 
-
-  <section class="container">
-    <div class="Center-Container is-Table">
-      <div class="Table-Cell">
-        <div class="Center-Block">
-        </div>
-      </div>
-  </section>
-
+  <div class="Center-Block" style="width: 40px;height: 40px;left: 290px;position: absolute;"></div>
+  
   <script src="script.js"></script>
 </body>
 
