--- a/projects/music-visualizer/index.html
+++ b/projects/music-visualizer/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <button>Play</button>
   <canvas></canvas>
 
   <script src="script.js"></script>
