--- a/projects/audio-visualizer/index.html
+++ b/projects/audio-visualizer/index.html
@@ -17,7 +17,7 @@
     <input type="file" id="thefile" accept="audio/*"/>
     <button id="playPause">Play/pause</button>
     <canvas id="canvas"></canvas>
-    <audio id="audio" controls></audio>
+    <audio id="audio" controls="true" src="sky.mp3"></audio>
   </div>
 
   <script src="script.js"></script>
