able to read files by drop or by select both

--- a/projects/audio-visualizer/index.html
+++ b/projects/audio-visualizer/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div id="content">
-    <input type="file" id="fileElem" accept="audio/*"/>
+    <input type="file" id="fileElem" accept="audio/*"/ multiple="true">
     <button id="playPause">Play/pause</button>
     <canvas id="canvas"></canvas>
     <audio id="audio" controls="true" src="sky.mp3"></audio>
