working on seekbar design

--- a/projects/audio-visualizer/index.html
+++ b/projects/audio-visualizer/index.html
@@ -17,6 +17,9 @@
     <input type="file" id="fileElem" accept="audio/*"/ multiple="true">
     <button id="playPause">Play/pause</button>
     <canvas id="canvas"></canvas>
+    <div id="seekBar">
+      <div id="progressBar"></div>
+    </div>
     <audio id="audio" controls="true" src="sky.mp3"></audio>
   </div>
 
