--- a/projects/audio-visualizer/index.html
+++ b/projects/audio-visualizer/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <div id="content">
+    <div id="volEl"></div>
     <input type="file" id="fileElem" accept="audio/*"/ multiple="true">
     <button id="playPause">Play/pause</button>
     <canvas id="canvas"></canvas>
