time logic done

--- a/projects/audio-visualizer/index.html
+++ b/projects/audio-visualizer/index.html
@@ -15,6 +15,10 @@
 <body>
   <div id="content">
     <div id="volEl"></div>
+    <div id="time">
+        <span class="current"></span> / 
+        <span class="total"></span>
+    </div>
     <input type="file" id="fileElem" accept="audio/*"/ multiple="true">
     <button id="playPause">Play/pause</button>
     <canvas id="canvas"></canvas>
