--- a/references/regular-expressions.html
+++ b/references/regular-expressions.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>RegExp</title>
 </head>
 <body>
-  <h1>Heading</h1>
+  <a href="https://www.hackerrank.com/challenges/js10-regexp-1/topics" target="_blank">RegExp</a>
+  
 
   <script>
     // A regular expression is an object that describes a pattern of characters.
@@ -20,10 +18,12 @@
     // var patt = new RegExp("regexp", "modifiers") // OR /regexp/modifiers;
 
     // Regular Expression Modifiers
-    // i = Perform case-insensitive matching
     // g = Perform a global match (find all matches rather than stopping after the first match)
+    // i = Perform case-insensitive matching
     // s = Perform single line matching
     // m = Perform multiline matching (^ and $ match start and end of line)
+    // u = unicode. Treat pattern as a sequence of unicode code points.
+    // y = sticky. Matches only from the index indicated by the lastIndex property of this regular expression in the target string.
 
     // Regular Expression Patterns
     // [abc]  [12]  [ab2-.]  // [^abc] (opposite effect)
@@ -35,7 +35,7 @@
     // (x|y)	Find any of the alternatives separated with |
 
     // Metacharacters are characters with a special meaning:(need to be escaped)
-    // .[{()\^$|?**
+    // .[{()\^$|?** 
     // \d	Digit (0-9)
     // \D	Not a Digit (0-9)
     // \w	Word character (a-z, A-Z, 0-9, _)
@@ -48,7 +48,7 @@
     // ^ Begining of a string
     // $ End of a string
     // \uxxxx	Find the Unicode character specified by the hexadecimal number xxxx
-    // \. Select everything escept new line
+    // \. The period matches any single character, except line terminators (e.g., a newline).
 
     // Quantifiers define quantities:
     // *  0 or more
@@ -90,11 +90,13 @@
     var patt = /is/;
     console.log(patt.test(str)); // true
     console.log(/Is/.test(str)); // false
+    console.log(/Is/i.test(str)); // true
 
     console.log('_____ exec() -> RegExp expression method _____');
-    // It searches a string for a specified pattern, and returns the found text. If no match is found, it returns null.
-    console.log(patt.exec(str)); // ["e", index: 16, input: "JavaScript is Awesome!"]
+    // It searches a string for a specified pattern, and returns the result array. If no match is found, it returns null.
+    console.log(patt.exec(str)); // ["is", index: 11, input: "JavaScript is Awesome!"]
     console.log(/Is/.exec(str)); // null
+    console.log(/Is/i.exec(str)); // ["is", index: 11, input: "JavaScript is Awesome!"]
 
     console.log(str.match(/e/)); // ["e", index: 16, input: "JavaScript is Awesome!"]
     console.log(str.match(/e/g)); // (2) ["e", "e"]
