--- a/references/classes.html
+++ b/references/classes.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-	<!-- https://www.hackerrank.com/challenges/js10-class/topics -->
-	<!-- https://www.youtube.com/watch?v=2rkEbcptR64&feature=emb_logo -->
+	<a href="https://www.hackerrank.com/challenges/js10-class/topics">Class Ref: Text</a>
+	<a href="https://www.youtube.com/watch?v=2rkEbcptR64&feature=emb_logo">Class Ref: Video</a>
 	
     <script>
     	//-------------------
