working on map reduce functions

--- a/references/es6/arrow-functions.html
+++ b/references/es6/arrow-functions.html
@@ -6,15 +6,16 @@
             Arrow functions are always anonymous.
             These expressions lexically bind the this value while using less syntax than a typical function expression.
             Here are some basic examples of arrow function syntax:
-         */
-        // (parameter) => {statements}
-        // parameter => {statements}
-        // parameter => expression
-        // parameter => {return expression}
 
-        // (param1, param2, ..., paramN) => {statements}
-        // (param1, param2, ..., paramN) => expression
-        // (param1, param2, ..., paramN) => {return expression}        
+            (parameter) => {statements}
+            parameter => {statements}
+            parameter => expression
+            parameter => {return expression}
+
+            (param1, param2, ..., paramN) => {statements}
+            (param1, param2, ..., paramN) => expression
+            (param1, param2, ..., paramN) => {return expression}        
+         */
         
         
         /* Arrow functions bring lot of clarity and code reduction. */
