--- a/references/es6/map-reduce-filter.html
+++ b/references/es6/map-reduce-filter.html
@@ -13,6 +13,53 @@
             }
          */
 
+        /* EXAMPLE 01 */
+        var ar = [1, 2, 3, 4, 5];
+        var ar2 = [];
+        
+        /* OLD METHOD */
+        const doubleValues = (value, index) => {
+            return value * 2;
+        }
+
+        for(let i = 0; i < ar.length; i++) {
+            ar2.push(doubleValues(ar[i]));
+        }
+
+        console.log(ar2);
+
+        /* NEW METHOD */
+        let ar3 = ar.map((value, i) => {
+            return value * 2;
+        });
+
+        console.log(ar3);
+        
+
+        /* EXAMPLE 02 */
+        var obj1 = [
+            {
+                name: 'name1',
+                exp: 10
+            },
+            {
+                name: 'name2',
+                exp: 12
+            },
+            {
+                name: 'name3',
+                exp: 15
+            }
+        ];
+
+        var obj2 = obj1.map((value, i) => {
+            return {
+                name: value.name,
+                exp: value.exp
+            };
+        });
+
+        console.log(obj2);
     </script>    
 </body>
 </html>
